fixed phone view squishing contact button

--- a/assets/css/_phoneView.scss
+++ b/assets/css/_phoneView.scss
@@ -125,9 +125,9 @@
     // border: solid 2px gray;
     .about-button-wrap {
       display: inline-block;
-      margin: 5% 25%;
+      margin: 5% 20%;
       // border: solid 1px red;
-      width: 50%;
+      width: 60%;
       .about-button {
         font-family: $font;
         font-size: 1em;
