--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -573,8 +573,8 @@
     margin: 5% 0 5% 0; }
     #about .about-button-wrap {
       display: inline-block;
-      margin: 5% 25%;
-      width: 50%; }
+      margin: 5% 20%;
+      width: 60%; }
       #about .about-button-wrap .about-button {
         font-family: "Open Sans", "Arial", sans-serif;
         font-size: 1em;
